# HW5

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
align/: align.py
test/: test_align.py
